# emre

./: .gitignore  DESCRIPTION  NAMESPACE  README  cleanup  configure  configure.in
R/: S3_interface.R  base_term_R6class.R  emre.R  fixef_term_R6class.R  formula_parsing.R  gaussian_term_R6class.R  indexer_utils.R  misc_util.R  optim_iterator.R  predict.R  random_effects.R  ranef_term_R6class.R  summarize.R  updaters.R  zzz.R
R/examples/: two_way_re_example.R  variance_updates_example.R
R/test/: add_data_test.R  gaussian_fit_test.R  optim_iterator_test.R  recognize_term_test.R  scaled_features_fit_test.R  testdriver.R  updater_test.R
R/tests/: add_data_test.R  indexer_utils_test.R  utils_test.R
data/: training_data.proto
inst/unitTests/: add_data_test.R  construct_ranef_test.R  gaussian_fit_test.R  indexer_utils_test.R  optim_iterator_test.R  predictor_constructor_test.R  recognize_term_test.R  scaled_features_fit_test.R  updater_test.R  utils_test.R
src/: Makevars  Makevars.in  configure  indexer_utils.cc  ranef_updaters.cc  ranef_updaters.h  training_data.pb.cc  training_data.pb.h  training_data.proto
src/base/: integral_types.h  logging.cc  logging.h  macros.h  map_util.h  numbers.cc  numbers.h  stringpiece.cc  stringpiece.h  stringprintf.cc  stringprintf.h
src/indexers/: bias_indexer.cc  bias_indexer.h  feature_index.h  indexer.h  memory_indexer.h  memory_indexer_test.cc  memory_indexer_test.cpp  memory_vector.cc  memory_vector.h  vector_indexer.cc  vector_indexer.h  vector_storage.h  vector_storage_test.cc  vector_storage_test.cpp
src/parameter_updater/: gaussian_feature_processor.cc  gaussian_feature_processor.h  gaussian_feature_processor_test.cc  poisson_feature_processor.cc  poisson_feature_processor.h  poisson_feature_processor_test.cc  scaled_feature_util.cc  scaled_feature_util.h  scaled_feature_util_test.cc  scaled_feature_util_test.cpp  update_processor.h
src/prior_updater/: gamma_prior_optimize.cc  gamma_prior_optimize.h  gamma_prior_optimize_test.cpp  gaussian_prior_optimize.cc  gaussian_prior_optimize.h  gaussian_prior_optimize_test.cpp  likelihoods.cc  likelihoods.h  metropolis_hastings.cc  metropolis_hastings.h  model_specification.h  prior_updater.h
src/ranef_updater/: block_relaxation.h  gaussian_block_relaxation.cc  gaussian_block_relaxation.h  gaussian_block_relaxation_test.cpp  poisson_block_relaxation.cc  poisson_block_relaxation.h  scaled_poisson_block_relaxation.cc  scaled_poisson_block_relaxation.h  scaled_poisson_block_relaxation_test.cc
src/util/: arrayslice.h  basic_types.h  distribution.cc  distribution.h  emre_util.cc  emre_util.h  emre_util_test.cc
tests/: doRUnit.R
vignettes/: emre-intro.Rnw
